infra/processor/002-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processor
  namespace: app
  labels:
    app: processor
spec:
  replicas: 3
  selector:
    matchLabels:
      app: processor
  template:
    metadata:
      labels:
        app: processor
    spec:
      containers:
      - name: processor-container
        image: processor:0.0.4
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
