infra/processor/003-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: processor-service
  namespace: app
  labels:
    app: processor
spec:
  selector:
    app: processor
  ports:
    - name: metrics
      protocol: TCP
      port: 8080
      targetPort: 8080
