infra/processor/006-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: app
  labels:
    app: processor
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: processor-allow-dns
  namespace: app
  labels:
    app: processor
spec:
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to: # Also allow traffic to the mq namespace
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: mq



---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mq-egress
  namespace: app
  labels:
    app: processor
spec:
  podSelector:
    matchLabels:
      app: processor
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 5672
